--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -174,6 +174,7 @@
         <activity android:name=".activity.CouponCodeActivity" />
         <activity android:name=".activity.ZoomActivity" />
         <activity android:name=".activity.MessageDetail_Activity" />
+        <activity android:name=".activity.PaymentWebViewActivity" />
 
         <service android:name=".firebase.DrewelFirebaseInstanceIDService">
             <intent-filter>
